# csv-import-db

./: .gitignore  Cargo.toml  Config.toml  README.md  cargo.toml
src/: main.rs
src/config/: mod.rs
src/database/: mod.rs  mysql.rs  postgres.rs
src/importers/: csv_processor.rs  mod.rs
src/notifications/: telegram.rs
