[package]
name = "csv-import-db"
version = "0.1.0"
edition = "2021"
authors = ["Irfannur Diah <irfnrdh@gmail.com>"]
description = "A flexible multi-database CSV importer with real-time processing"
license = "MIT"
repository = "https://github.com/irfnrdh/csv-import-db"
default-run = "csv-import-db"

[dependencies]
# Async runtime
tokio = { version = "1.43.0", features = ["full"] }

# Database
sqlx = { version = "0.8.3", features = [
    "runtime-tokio", 
    "mysql", 
    "postgres", 
    "sqlite"
] }
mysql = "26.0.0"
postgres = "0.19.10"


# CSV Handling
csv = "1.3.1"

# Serialization
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# Error Handling
anyhow = "1.0.95"
thiserror = "2.0.11"

# Logging
log = "0.4.25"
env_logger = "0.11.6"

# File Watching
notify = "8.0.0"

# Notifications
teloxide = { version = "0.13.0", optional = true }

rayon = "1.10.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

fake = { version = "3.0.1", features = ["derive"] }

mockall = "0.13.1"
toml = "0.8.20"
async-trait = "0.1.86"

[dev-dependencies]

[features]
default = []
telegram-notifications = ["teloxide"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1


